--- a/D3DWinUI3.csproj
+++ b/D3DWinUI3.csproj
@@ -30,7 +30,10 @@
     <Content Include="Monkey.fbx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Shader.hlsl">
+    <Content Include="PixelShader.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="VertexShader.hlsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
