--- a/D3DWinUI3.csproj
+++ b/D3DWinUI3.csproj
@@ -13,6 +13,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="BrushRGBA.png" />
     <None Remove="Monkey.fbx" />
     <None Remove="PixelShader.hlsl" />
     <None Remove="Shader.hlsl" />
@@ -27,7 +28,7 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-    <Content Include="Monkey.fbx">
+    <Content Include="BrushRGBA.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="PixelShader.hlsl">
@@ -39,9 +40,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AssimpNet" Version="5.0.0-beta1" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
     <PackageReference Include="Vortice.D3DCompiler" Version="3.2.0" />
     <PackageReference Include="Vortice.Direct3D11" Version="3.2.0" />
     <PackageReference Include="Vortice.DirectX" Version="3.2.0" />
